# math-drawing-assistant

./: .env.example  .gitignore  README.md  check_env.py  main.py  main_window.py  plot_engine.py  pyproject.toml  pysidedeploy.spec  数学绘图助手 PRD.md  数学绘图助手_Codex协助开发步骤清单_v0.3.md  数学绘图助手：Codex 协助开发步骤清单.md  联网确认.md
docs/: Claude_Fable5_规划文档审核报告_2026-07-19.md  architecture.md  decisions.md  local-quality.md  performance-environment.md  supported-formulas.md
docs/audits/: stage-00a-environment-dependency-audit-2026-07-19.md  stage-0B-1-python-dependency-baseline-readonly-audit.md  stage-0B-2-controlled-dependency-baseline-and-smoke.md  stage-0B-3-retire-legacy-pysidedeploy-spec.md
math_drawing_assistant/: __init__.py  app_controller.py  bootstrap.py  logging_config.py
math_drawing_assistant/config/: __init__.py  limits.py
math_drawing_assistant/engine/: __init__.py  equation_splitter.py  normalizer.py  numeric_executor.py  parser.py  plot_classifier.py  render_plan_builder.py  source_map.py  spec_builder.py  tokenizer.py  validators.py  viewport_resolver.py
math_drawing_assistant/models/: __init__.py  diagnostics.py  errors.py  plot_specs.py  render_plan.py  requests.py  restricted_ast.py  results.py  state.py  viewport.py
math_drawing_assistant/ui/: __init__.py  main_window.py  qt_image.py  theme.py
resources/styles/: dark.qss  light.qss
tests/: conftest.py  test_app_controller.py  test_diagnostics.py  test_errors.py  test_limits.py  test_logging_config.py  test_models.py  test_stage1_bootstrap.py
tests/engine/: test_equation_splitter.py  test_normalizer.py  (+11 more)
(+9 files in other folders)
